--- a/html/trends.html
+++ b/html/trends.html
@@ -18,7 +18,7 @@
 
         <div class="nav_wrap">
             <nav class="navbar">
-                <a href="index.html" class = "nav_link">Home</a>
+                <a href="https://filipaisaeva.github.io/Online-magazine/html/" class = "nav_link">Home</a>
                 <a href="trends.html" class = "nav_link">Trends</a>
                 <a href="issues.html" class = "nav_link">Issues</a>
                 <a href="DIY.html" class = "nav_link">DIY</a>
