--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
+
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="Online magazine project">
+    <meta name="keywords" content="fashion, sustainability, conscious, minimalism">
+    <meta name="author" content="Filipa Isaeva">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/mystyle.css">
-    <title>Fashion magazine</title>
+    <title>Fashion magazine | Home</title>
 </head>
 
 <body>
@@ -16,10 +20,10 @@
 
         <div class="nav_wrap">
             <nav class="navbar">
-                <a href="index.html" class = "nav_link">Home</a>
-                <a href="trends.html" class = "nav_link">Trends</a>
-                <a href="issues.html" class = "nav_link">Issues</a>
-                <a href="DIY.html" class = "nav_link">DIY</a>
+                <a href="index.html" class="nav_link">Home</a>
+                <a href="trends.html" class="nav_link">Trends</a>
+                <a href="issues.html" class="nav_link">Issues</a>
+                <a href="DIY.html" class="nav_link">DIY</a>
             </nav>
         </div>
     </header>
@@ -30,7 +34,7 @@
             <div class="text_content">
                 <h2>Trending</h2>
                 <p class="paragraph">Interested to know what the current fashion trends are? <br> Looking for inspiration? You can find them here. Also, this page <br> features the latest collections of sustainable brands and where <br> you can find them near you.</p>
-                <a href="trends.html" class = "redirect_link">See more</a>
+                <a href="trends.html" class="redirect_link">See more</a>
             </div>
         </section>
         <p class="line_separator"></p>
@@ -39,8 +43,8 @@
             <img src="../images/childlabour.jpeg" alt="Sustainability" class="image">
             <div class="text_content">
                 <h2>Issues</h2>
-                <p class="paragraph">We live in an age where consumerism affect every aspect of our <br> lives, including fashion. See what are the problems that the fashion <br> industry has created because of this phenomenon and how you can <br> contribute for a better future.</p>
-                <a href="issues.html" class = "redirect_link">See more</a>
+                <p class="paragraph">We live in an age where consumerism affects every aspect of our <br> lives, including fashion. See what are the problems that the fashion <br> industry has created because of this phenomenon and how you can <br> contribute for a better future.</p>
+                <a href="issues.html" class="redirect_link">See more</a>
             </div>
         </section>
         <p class="line_separator"></p>
@@ -50,7 +54,7 @@
             <div class="text_content">
                 <h2>Do it yourself</h2>
                 <p class="paragraph">If you are about to throw clothing you don't wear anymore, think again! <br> Old clothes can be reused in many ways. On this page you can find <br> tutorials for making new interesting crafts from the things that you no <br> longer use.</p>
-                <a href="DIY.html" class = "redirect_link">See more</a>
+                <a href="DIY.html" class="redirect_link">See more</a>
             </div>
         </section>
     </main>
@@ -72,4 +76,6 @@
             <a href="http://www.instagram.com"><img src="../images/instagram.svg" alt="Instagram" class="some_image"></a>
         </section>
     </footer>
-</body></html>
+</body>
+
+</html>
