--- a/html/FastFashion.html
+++ b/html/FastFashion.html
@@ -3,10 +3,13 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="Online magazine project">
+    <meta name="keywords" content="fashion, sustainability, conscious, minimalism, issues, fast fashion">
+    <meta name="author" content="Filipa Isaeva">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/articles.css">
     <link rel="stylesheet" href="../css/mystyle.css">
-    <title>Fashion magazine</title>
+    <title>Fashion magazine | Fast fashion</title>
 </head>
 
 <body>
@@ -18,7 +21,7 @@
 
         <div class="nav_wrap">
             <nav class="navbar">
-                <a href="index.html" class = "nav_link">Home</a>
+                <a href="https://filipaisaeva.github.io/Online-magazine/html/" class = "nav_link">Home</a>
                 <a href="trends.html" class = "nav_link">Trends</a>
                 <a href="issues.html" class = "nav_link">Issues</a>
                 <a href="DIY.html" class = "nav_link">DIY</a>
