--- a/html/trends.html
+++ b/html/trends.html
@@ -3,10 +3,13 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="Online magazine project">
+    <meta name="keywords" content="fashion, sustainability, conscious, minimalism, trending, inspiration, outfits">
+    <meta name="author" content="Filipa Isaeva">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/mystyle.css">
     <link rel="stylesheet" href="../css/trends.css">
-    <title>Fashion magazine</title>
+    <title>Fashion magazine | Trends</title>
 </head>
 
 <body>
@@ -18,10 +21,10 @@
 
         <div class="nav_wrap">
             <nav class="navbar">
-                <a href="https://filipaisaeva.github.io/Online-magazine/html/" class = "nav_link">Home</a>
-                <a href="trends.html" class = "nav_link">Trends</a>
-                <a href="issues.html" class = "nav_link">Issues</a>
-                <a href="DIY.html" class = "nav_link">DIY</a>
+                <a href="https://filipaisaeva.github.io/Online-magazine/html/" class="nav_link">Home</a>
+                <a href="trends.html" class="nav_link">Trends</a>
+                <a href="issues.html" class="nav_link">Issues</a>
+                <a href="DIY.html" class="nav_link">DIY</a>
             </nav>
         </div>
     </header>
@@ -29,7 +32,7 @@
     <main>
         <h2 class="PageHeading">Trending</h2>
         <div class="banner_container">
-            <img class="MallImage" src="../images/mall.jpg" alt = "Mall">
+            <img class="MallImage" src="../images/mall.jpg" alt="Mall">
             <a href="NewCollections.html" class="SectionHeading">Latest collections and sales</a>
         </div>
         <h2 class="PageHeading">Draw inspiration</h2>
@@ -65,4 +68,6 @@
             <a href="http://www.instagram.com"><img src="../images/instagram.svg" alt="Instagram" class="some_image"></a>
         </section>
     </footer>
-</body></html>
+</body>
+
+</html>
